Small update to post 9

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -193,7 +193,7 @@
 
 	<div *ngSwitchCase="9">
 
-		<p>Hello!  If you follow me on social media, you probably saw that yesterday I decided to take a social media break for a month to focus on preparing for interviewing.  Sorry for the whiplash that likely caused you to have if you follow my social media.  I finished making the decision yesterday that I want to start interviewing for dev jobs, and now the next step is to strategize how to go about this.  So I figured, hey, let's share it with the internet!  Why not.  Well, actually, at some point I might take this post down, because this blog is a project that I'll be sharing on my portfolio, and maybe it's not such a good idea to give away my strategy with everyone when I am actually interviewing!  We'll see how I feel when I get to that point... but for now, it's fine.  (And, don't worry, I now know how to delete commits on Github too ;))</p>
+		<p>Hello!  If you follow me on social media, you probably saw that yesterday I decided to take a social media break for a month to focus on preparing for interviewing.  Sorry for the whiplash that likely caused you to have if you follow my social media.  I finished making the decision yesterday that I want to start interviewing for dev jobs, and now the next step is to strategize how to go about this.  So I figured, hey, let's share it with the internet!  Why not.</p>
 
 		<p>So first, let's start by talking high level.</p>
 
