Styling pre tag
For code snippets

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,12 @@ body {
 	color: #fff;
 }
 
+pre {
+	color: #fff;
+	border: 1px solid white;
+	padding: 10px;
+}
+
 a {
 	text-decoration: none;
 	color: #fff;
