--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -315,6 +315,22 @@
 
 	</div>
 
+	<div *ngSwitchCase="12">
+
+		<p>Algorithms.  And data structures.  And bears, oh my!</p>
+
+		<p>I've been working on finding a job!  For me, this requires a couple parts.  The first part is your standard job search tango.  The Indeed searches, the flipping on of the "recruiters can contact me" Bat-Signal on LinkedIn, the filling out of applications, and a few times talking with actual people about actual jobs on actual phones.  The job search is a skill in itself.  The whole "talking to someone else without making a joke and acting professional" thing does not come naturally.  Each time I look for a job, it usually takes a little while to ramp up.</p>
+
+		<p>The additional part, because I am going for a software engineering job, is to learn the data structures and algorithms and design patterns that CS students learn in college.  At least to a basic level of competency.</p>
+
+		<p>In an earlier post, I may have whined a little about having to do this.  I take back my whine.  I am having so much fun!  It's like going back to college and solving math problems all over again.  I love math!  I was a math minor in college because I just liked it so much and it was easy for me.  Well, except for differential equations... let's not talk about THAT class that I'm still not sure how I passed.</p>
+
+		<p>And also, I heart learning.  I've learned a lot about the JavaScript language and its inner workings through this study.  Seeing things that I saw before that didn't make sense to me, like React refusing to autobind its component methods, suddenly come into clearer view is so rewarding.</p>
+
+		<p>For a little while, new projects are on the back burner.  I am still working on improving my existing projects as I have the time.  Once I've completed all the "must know" algorithms and data structures and done a fair amount more LeetCode problems, I'll go back to regularly scheduled programming (har har har).</p>
+
+	</div>
+
 	</div>
 	
 </div>
