--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -363,6 +363,34 @@
 
 	</div>
 
+	<div *ngSwitchCase="14">
+
+		<p>Hi there.</p>
+
+		<p>I've been trying to figure out how to write this post for a little while now.  As I write this, I still don't really know what I'm going to say.  I'm winging it.  All I know is that I do want to write something.</p>
+
+		<p>This past week I've just felt off.  Part of it was because my grandpa was really sick, and passed away last Thursday night.  He was 92.  He was ready.  He had been in the hospital for some time, wasn't able to do any of the things he enjoyed.  Him and my dad used to have hours long conversations on the phone about the most boring subjects known to man (money, politics, business), but even that simple thing, talking on the phone, became impossible for him these past few months.  Last week he wanted my dad to call him, and with my grandma's help, he told my dad he was proud of him.  He stopped eating.  And shortly after, he was gone.</p>
+
+		<p>Obviously that was a big part of why I was feeling off!  We all knew this was coming, but it is still hard to lose a grandparent.  I'm doing better, just glad that he isn't suffering anymore.</p> 
+
+		<p>On a completely different note, and the reason for this post, yesterday was the one year anniversary of leaving my last QA job at D3 Banking to start a new career as a software developer.</p>
+
+		<p>Up until I left my job, almost all decisions I made were based on what other people might think of it.  I wasn't conscious of this.  It was a voice in my head saying "you should do X."  For example, I clearly remember thinking that it would be harder for me to shine in software development than in QA because development was more competitive, so I should stick to QA because of that.  Translated - I cared more about having to start from the beginning as a developer and "looking bad" to other people than about going after something I thought I would enjoy more.  Pretty sad that I put the perceived thoughts of other people ahead of my own hopes and dreams.</p>
+
+		<p>So this year has been about me doing what I want to do, and trying to not give a rip what anybody else thinks about it.  In that way, it's been both the most rewarding year ever, and the most challenging year ever.</p>
+
+		<p>As suspected, being a newbie coder, and especially doing it the way I have (on my own) has been very hard.  I'm applying to jobs right now and having a tough time figuring this out.  It seems like many entry level jobs want you to be doing some QA to start out, it's baked in.  For me that's kinda like, uhhh... how do I even approach this issue?  Obviously I'm willing to help set up automation, and even do some manual testing if it's a small team and the other developers are doing it too.  But I'm not going to agree to do more than like, 25% of my time doing testing that I would have done as a QA.  I need to be ramping up "how to dev in the real world" skills, not rehashing a career I am not a fit for anymore.  And then there's unit testing, which I DO want to learn to do better, what if employers think my aversion to doing testing includes unit testing?  Should I just include this paragraph on my resume?  I'm still figuring out how to broach this subject with employers.</p>
+
+		<p>To be totally honest, I'm not even 100% sure I want to go back to a traditional job, STILL.  I thought after a year I'd have this all figured out.  I sure as hell don't.  I'm still afraid that a new job is going to end up like D3.  D3 was a bad fit for me.  4 months in, I knew the job wasn't going to work, but I stayed a year.  It was my responsibility to leave once I figured this out, and I didn't.  I stayed until the entire rest of my life was scorched earth.  It took over 9 months to get completely back to normal.  I am afraid of getting sucked into staying at the wrong job too long again.  I don't regret staying too long at D3.  If I hadn't, I probably wouldn't have realized I wanted to be a developer.  But I don't have the strength to endure another one of those.</p>
+
+		<p>I guess what all this boils down to is, it's just hard for me to figure out where I fit in right now.  I'm doing what I want to do, now how do I make some money at it?  That's what I'm working out.  I'll get there.  I've got 30 more years to make a career in this!  No rush :)</p>
+
+		<p>Even though this year has been challenging, it has also been so much fun and I wouldn't change a thing about it.  I've never had this much confidence.  That is the main thing I have gained out of this experience.  I know I'm a good person, I got knocked down over the past couple of years but I'm in the process of pulling myself up by my own bootstraps.  I firmly believe if you are honest and you do the best you can, things are going to line up for you and start to go right eventually.</p>
+
+		<p>If you're still with me, thanks for reading.  It's past midnight as I write this - time to get some sleep.  Take care.</p>
+
+	</div>
+
 	</div>
 	
 </div>
